--- a/ejemplo.html
+++ b/ejemplo.html
@@ -9,7 +9,7 @@
         <nav> <ul> <li><a href="#">Correo Institucional</a></li> <li><a href="#">SIA</a></li>
             </ul>
         </nav>
-        <figure> <img src="logo_unal.png" alt="Escudo Universidad Nacional de Colombia"> <figcaption>Sede Manizales</figcaption> </figure>
+        <figure> <img src="https://unal.edu.co/fileadmin/templates/main/images/logo_unal.png" alt="Escudo Universidad Nacional de Colombia"> <figcaption>Sede Manizales</figcaption> </figure>
     </header>
 
     <main> <section> <article> <header>
