--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -13,7 +13,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="escudo_universidad.png" alt="Escudo Institucional">
+            <img src="https://unal.edu.co/fileadmin/templates/main/images/logo_unal.png" alt="Escudo Universidad Nacional de Colombia">
             <figcaption>Sede Manizales</figcaption>
         </figure>
     </header>
@@ -53,8 +53,8 @@
                 <tbody>
                     <tr>
                         <td>Programación Web</td>
-                        <td>Albeiro Montes</td>
-                        <td>L-204</td>
+                        <td>Jose Albeiro Montes</td>
+                        <td>P-202</td>
                     </tr>
                 </tbody>
             </table>
