--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -13,7 +13,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="https://unal.edu.co/fileadmin/templates/main/images/logo_unal.png" alt="Escudo Universidad Nacional de Colombia">
+            <img src="img/logo.png" alt="Escudo Universidad Nacional de Colombia">
             <figcaption>Sede Manizales</figcaption>
         </figure>
     </header>
